线索二叉树

--- a/补充.md
+++ b/补充.md
@@ -12,6 +12,22 @@
 
 **1.0 别乱乘 ： a/1.0*b （a/b）  这样就改变原来的算式了！！！！！！**  
 
+# 模板注意事项
+
+## signed问题
+
+
+
+**使用signed 注意格式化输入（scanf）时 要用 %lld**
+
+## 闰年判断
+
+**if(*year*%400 == 0||*year*%100 != 0 && *year*%4 == 0) *// 闰年判断***
+
+
+
+
+
 # ==一、dfs==
 
 ## ==飞机降落==
