--- a/408/数据结构实验.md
+++ b/408/数据结构实验.md
@@ -2,13 +2,207 @@
 
 ## 编码问题 & 全局变量（堆）/局部变量（栈）问题
 
+### 方法 1：通过图形用户界面设置
+
+1. **打开系统环境变量设置界面**：
+   - 按 `Win + S`，在搜索框中输入 `环境变量`，选择 **编辑系统环境变量**。
+   - 在弹出的“系统属性”窗口中，点击 **环境变量** 按钮。
+2. **新建或修改环境变量**：
+   - 在“环境变量”窗口中：
+     - **设置为用户变量**（仅对当前用户生效）：在“用户变量”部分，点击 **新建** 或 **编辑**。
+     - **设置为系统变量**（对所有用户生效）：在“系统变量”部分，点击 **新建** 或 **编辑**。
+   - 填写：
+     - **变量名**：`LANG`
+     - **变量值**：例如，`zh_CN.UTF-8`（表示中文简体，UTF-8 编码）
+3. **保存设置并生效**：
+   - 点击 **确定** 关闭所有窗口。
+   - 重启相关应用程序或终端，使更改生效。
+
+------
+
+### 方法 2：通过命令行设置（临时）
+
+如果只是临时需要，可以在命令行中直接设置：
+
+- **PowerShell**:
+
+  ```
+  powershell
+  
+  
+  复制代码
+  $env:LANG = "zh_CN.UTF-8"
+  ```
+
+  （只在当前 PowerShell 会话中生效）
+
+- **CMD**:
+
+  ```
+  cmd
+  
+  
+  复制代码
+  set LANG=zh_CN.UTF-8
+  ```
+
+  （只在当前 CMD 会话中生效）
+
+------
+
+### 方法 3：通过命令行设置（永久）
+
+使用命令行工具设置为永久环境变量：
+
+1. 打开 **管理员权限 PowerShell 或 CMD**。
+
+2. 执行以下命令：
+
+   ```
+   cmd
+   
+   
+   复制代码
+   setx LANG "zh_CN.UTF-8" /M
+   ```
+
+   - `/M` 表示设置为系统变量。如果只需要为当前用户设置，去掉 `/M`。
+
+------
+
+完成后，可以通过打开新的终端，运行以下命令检查变量是否生效：
+
+```
+cmd
+
+
+复制代码
+echo %LANG%
+```
+
 **编码问题：使用某种格式进行编码** 
 
 **查看 ： 使用某种格式解码**
 
-终端输入输出 ：在电脑区域里设置lang环境变量
+~~~ceylon
+chcp 命令：
+chcp 是 Windows 命令提示符（CMD）中用于显示或设置活动代码页编号的命令。代码页决定了系统如何解释字符编码。
+当您在命令提示符中输入 chcp 并回车，它会显示当前活动的代码页编号。常见的代码页包括：
+
+936: 简体中文 GBK
+950: 繁体中文 Big5
+437: 美国英语
+65001: UTF-8
+~~~
 
 
+
+
+
+**活动代码页（Active Code Page）** 是指当前系统控制台使用的字符编码标准，用于在命令行窗口（如 Windows 命令提示符或 PowerShell）中处理文本输入和输出。代码页决定了如何在终端中显示和解析字符。
+
+### 1. **什么是代码页？**
+
+代码页（Code Page）是一种字符编码标准，它为每个字符分配一个唯一的数字（代码点）。不同的代码页可能为相同的数字分配不同的字符。
+
+- Windows 使用代码页来支持多语言字符集。
+- 常见的代码页包括：
+  - **437**：美国英语（原始 MS-DOS 默认代码页）。
+  - **936**：简体中文（GBK 编码）。
+  - **65001**：UTF-8（支持全球多数字符）。
+  - **1252**：西欧语言（Windows Latin 1）。
+
+### 2. **活动代码页的作用**
+
+活动代码页决定了：
+
+- 控制台窗口（cmd 或 PowerShell）如何解释键盘输入。
+- 控制台输出中的文本如何显示。
+
+### 3. **查看当前活动代码页**
+
+在命令提示符或 PowerShell 中运行以下命令可以查看当前活动代码页：
+
+```
+cmd
+
+
+复制代码
+chcp
+```
+
+输出示例：
+
+- `Active code page: 936`：表示当前控制台使用 GBK 编码。
+- `Active code page: 65001`：表示当前控制台使用 UTF-8 编码。
+
+### 4. **切换活动代码页**
+
+使用 `chcp` 命令可以切换活动代码页。例如：
+
+- 切换到 UTF-8：
+
+  ```
+  cmd
+  
+  
+  复制代码
+  chcp 65001
+  ```
+
+- 切换到 GBK（简体中文）：
+
+  ```
+  cmd
+  
+  
+  复制代码
+  chcp 936
+  ```
+
+### 5. **活动代码页与语言环境的关系**
+
+- **活动代码页**：决定了控制台中的字符编码方式。
+- **语言环境**（如 `$env:LANG`）：影响应用程序使用的区域设置和语言，但它不会直接更改活动代码页。
+
+例如，设置 `$env:LANG` 为 `zh_CN.UTF-8` 只告诉支持这个环境变量的程序使用中文和 UTF-8，而控制台输出仍然会受活动代码页的约束。
+
+---
+
+
+
+在 Windows 的 **控制面板 -> 区域 -> 管理 -> 非 Unicode 程序的语言设置 -> Beta: 使用 UTF-8 提供全球语言支持**，启用这个选项会将系统的 **非 Unicode 程序** 的默认编码切换为 **UTF-8**。以下是这个设置的具体作用和影响：
+
+###  **Beta: 使用 UTF-8 提供全球语言支持**
+
+#### 启用后的作用：
+
+- 系统编码更改为 UTF-8
+
+  ：
+
+  - 非 Unicode 程序将使用 UTF-8 处理字符，而不再依赖区域性代码页（如 936 或 1252）。
+
+- 统一字符集
+
+  ：
+
+  - 不论语言和地区，UTF-8 能表示几乎所有的字符（包括中文、日文、韩文、阿拉伯文等）。
+
+- 减少乱码风险
+
+  ：
+
+  - 如果非 Unicode 程序的输入和输出是 UTF-8 编码，这项设置能避免编码错误。
+
+#### 对哪些程序生效？
+
+- 非 Unicode 程序
+
+  ：
+
+  - 一些旧的软件（尤其是早期的 Windows 应用）使用传统的代码页而非 Unicode 处理字符。
+  - 比如基于 GBK 的旧版中文软件，启用此选项后，它们会尝试使用 UTF-8 解析文本。
 
 问题：全局变量 访问index超过数组长度时不会报错
 
