第四章最初完成

--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -4,6 +4,8 @@
 
 ---
 
+**复习时==通览全局== ==理清结构== 再==深究细节==**！！！！
+
 # 第一章
 
 ## 1.操作系统的概念、功能
@@ -1225,7 +1227,7 @@ PV操作
 
 
 
-![image-20250302202205306](C:/Users/33813/AppData/Roaming/Typora/typora-user-images/image-20250302202205306.png)
+![image-20250302202205306](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250302202205306.png)
 
 
 
@@ -1314,9 +1316,7 @@ PV操作
 
 ---
 
-
-
-# 内存
+# 第三章
 
 ## 1.内存的基础知识
 
@@ -1452,3 +1452,625 @@ PV操作
 
 
 ![image-20250302203456766](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250302203456766.png)
+
+
+
+# 第四章
+
+![image-20250305210315310](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305210315310.png)
+
+![image-20250305210350578](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305210350578.png)
+
+==无结构==与==有结构==文件的例子：
+
+![image-20250305210439945](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305210439945.png)
+
+**文件内部如何组织的问题** ---- ==逻辑结构==
+
+
+
+
+
+![image-20250305210613801](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305210613801.png)
+
+**详情见后面的==文件操作==：**
+
+
+
+![image-20250305211159110](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211159110.png)
+
+
+
+
+
+以==块==（磁盘块/物理块）为单位
+
+![image-20250305211258412](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211258412.png)
+
+**文件管理的初识：**
+
+
+
+
+
+
+
+![image-20250305211249217](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211249217.png)
+
+
+
+## 文件的逻辑结构
+
+
+
+![image-20250305211649490](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211649490.png)
+
+### 有结构文件
+
+**定长记录和不定长记录**
+
+​	![image-20250305211730369](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211730369.png)
+
+---
+
+
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211759509.png)
+
+无结构文件就是**流式文件**
+
+
+
+### 有结构文件的逻辑结构
+
+![image-20250305211841160](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305211841160.png)
+
+#### 顺序文件
+
+![image-20250305212044164](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212044164.png)
+
+
+
+![image-20250305212055094](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212055094.png)
+
+
+
+#### 索引文件
+
+![image-20250305212101926](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212101926.png)
+
+#### 索引顺序文件
+
+![image-20250305212124463](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212124463.png)
+
+**效率分析：**
+
+![image-20250305212128488](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212128488.png)
+
+**套娃继续（经典优化）多级方法**
+
+![image-20250305212133569](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212133569.png)
+
+**总结：**
+
+
+
+![image-20250305212135873](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212135873.png)
+
+![image-20250305212257911](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212257911.png)
+
+## 文件目录和文件控制块（FCB）
+
+**注意联系进程控制块** （PCB）
+
+![image-20250305212331276](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212331276.png)
+
+目录对应一个目录文件 目录文件中存放着一条一条的FCB （一个文件目录项就是对应一个FCB）
+
+**重点：FCB的组成**
+
+
+
+![image-20250305212340000](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212340000.png)
+
+### 目录结构
+
+#### 单级目录结构
+
+![image-20250305212608832](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212608832.png)
+
+#### 两级目录结构
+
+![image-20250305212623516](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212623516.png)
+
+#### 多级(树形)目录结构
+
+![image-20250305212701620](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212701620.png)
+
+---
+
+
+
+![image-20250305212722417](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212722417.png)
+
+
+
+
+
+
+
+#### 无环图目录结构
+
+
+
+![image-20250305212738441](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212738441.png)
+
+### 索引结点
+
+![image-20250305212918539](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212918539.png)
+
+![image-20250305212914161](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212914161.png)
+
+![image-20250305212936839](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305212936839.png)
+
+
+
+
+
+---
+
+## 文件的物理结构（文件的分配方式）
+
+
+
+![image-20250305213020942](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213020942.png)
+
+**就是如何放在外存当中！**
+
+![image-20250305213049706](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213049706.png)
+
+### 文件块、磁盘块
+
+![image-20250305213228264](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213228264.png)
+
+
+
+​	![image-20250305213255263](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213255263.png)
+
+
+
+
+
+### 连续分配
+
+![image-20250305213506745](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213506745.png)
+
+
+
+![image-20250305213432345](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213432345.png)
+
+
+
+![image-20250305213436444](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213436444.png)
+
+
+
+
+
+![image-20250305213624833](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213624833.png)
+
+
+
+### 链接分配
+
+
+
+#### 隐式链接
+
+![image-20250305213741882](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213741882.png)
+
+
+
+![image-20250305213746100](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213746100.png)
+
+
+
+
+
+
+
+#### 显式链接
+
+![image-20250305213811490](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213811490.png)
+
+
+
+![image-20250305213858779](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213858779.png)
+
+**随机访问的体现：**就是可以通过内存中的这个FAT表直接找到要访问的块号， 然后再去外存中去找块号的物理地址 这样就是==随机访问==了
+
+---
+
+
+
+
+
+![image-20250305213904437](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305213904437.png)
+
+### 索引分配
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305214536743.png)
+
+**问题：论为什么可以隐含逻辑块号呢？**
+
+因为这个索引表的表项每一行都是==一样==的是占**四个字节** 只要我们知道这个索引表的起始位置 又因为这种表一般都是顺序存储的 所以可以直接计算出是哪个逻辑块号 这样就知道物理块号
+
+
+
+![image-20250305215036984](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215036984.png)
+
+
+
+![image-20250305215048733](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215048733.png)
+
+
+
+![image-20250305215102598](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215102598.png)
+
+![image-20250305215112944](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215112944.png)
+
+![image-20250305215126720](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215126720.png)
+
+**这个还是存在一点问题：**
+
+就是一个文件很小（1KB） 但是使用这个两层索引 那么读入这个1KB文件都要三次读磁盘的操作 大大增加了开销
+
+
+
+
+
+
+
+![image-20250305215347086](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215347086.png)
+
+​	
+
+
+
+
+
+**总结：**
+![image-20250305215402624](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215402624.png)
+
+---
+
+
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215410590.png)
+
+
+
+---
+
+## 文件的逻辑结构和物理结构
+
+
+
+![image-20250305215455421](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215455421.png)
+
+
+
+### 无结构文件的逻辑/物理结构
+
+
+
+
+
+![image-20250305215503253](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215503253.png)
+
+
+
+![image-20250305215528400](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215528400.png)
+
+![image-20250305215549120](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215549120.png)
+
+![image-20250305215607909](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215607909.png)
+
+### 顺序文件（顺序存储的物理结构）
+
+
+
+
+
+![image-20250305215625003](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305215625003.png)
+
+
+
+
+
+![image-20250305222852941](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222852941.png)
+
+![image-20250305222916307](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222916307.png)
+
+
+
+![image-20250305222922213](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222922213.png)
+
+
+
+---
+
+
+
+
+
+![image-20250305222121693](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222121693.png)
+
+
+
+### 顺序文件（链式存储的物理结构）
+
+
+
+
+
+
+
+
+
+![image-20250305222124361](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222124361.png)
+
+![image-20250305222128874](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305222128874.png)
+
+---
+
+
+
+### 索引文件的物理结构
+
+
+
+![image-20250305223545623](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223545623.png)
+
+![image-20250305223515617](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223515617.png)
+
+![image-20250305223703822](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223703822.png)
+
+---
+
+
+
+## 文件存储空间的管理
+
+
+
+
+
+​		![image-20250305223727762](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223727762.png)
+
+![image-20250305223751093](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223751093.png)
+
+
+
+
+
+### 空闲表法
+
+![image-20250305223852848](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223852848.png)
+
+
+
+![image-20250305223900059](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223900059.png)
+
+
+
+![image-20250305223908051](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223908051.png)
+
+
+
+![image-20250305223914749](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305223914749.png)
+
+
+
+---
+
+
+
+### 空闲链表法
+
+![image-20250305224007731](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224007731.png)
+
+![image-20250305224014519](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224014519.png)
+
+![image-20250305224020474](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224020474.png)
+
+---
+
+
+
+### 位示图法
+
+![image-20250305224049792](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224049792.png)
+
+![image-20250305224047472](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224047472.png)
+
+### 成组链接法
+
+![image-20250305224113343](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224113343.png)
+
+![image-20250305224128285](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224128285.png)
+
+由于此时超级块已经读入内存了，所以在进行这个检查的操作的时候不需要去读磁盘操作，只需要找到内存当中这些超级块的数据检查即可
+
+
+
+![image-20250305224223747](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224223747.png)
+
+**作为这个分组的第一个磁盘块，还需要记录下一组空闲盘块的一些信息**！！！！
+
+![image-20250305224231148](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224231148.png)
+
+
+
+**回收：**
+
+![image-20250305224620995](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224620995.png)
+
+
+
+![image-20250305224732155](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224732155.png)
+
+
+
+
+
+---
+
+
+
+
+
+![image-20250305224744112](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224744112.png)
+
+![image-20250305224749744](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224749744.png)
+
+![image-20250305224801747](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224801747.png)
+
+![image-20250305224806106](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224806106.png)
+
+
+
+## 文件的基本操作
+
+### 创建文件
+
+
+
+![image-20250305224843747](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224843747.png)
+
+### 删除文件
+
+
+
+![image-20250305224849413](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224849413.png)
+
+### 打开文件
+
+
+
+![image-20250305224851701](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224851701.png)
+
+![image-20250305224859507](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224859507.png)
+
+### 关闭文件
+
+
+
+![image-20250305224933460](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224933460.png)
+
+### 读文件
+
+
+
+![image-20250305224937386](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224937386.png)
+
+### 写文件
+
+
+
+![image-20250305224942060](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224942060.png)
+
+**总结：**
+
+![image-20250305224946058](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305224946058.png)
+
+## 文件共享
+
+![1741186265024](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186265024.png)
+
+![1741186268697](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186268697.png)
+
+![1741186271825](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186271825.png)
+
+![1741186278075](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186278075.png)
+
+![1741186280933](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186280933.png)
+
+**总结：**
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186284589.png)
+
+## 文件保护
+
+![1741186390794](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186390794.png)
+
+### 口令保护
+
+
+
+![1741186394954](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186394954.png)
+
+### 加密保护
+
+
+
+![1741186398878](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186398878.png)
+
+### 访问控制
+
+
+
+![1741186402750](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186402750.png)
+
+![1741186406155](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186406155.png)
+
+![1741186419965](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186419965.png)
+
+![1741186423347](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186423347.png)
+
+**总结：**
+
+![1741186426229](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186426229.png)
+
+
+
+## 文件系统以及文件系统的层次结构
+
+![image-20250305225441349](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305225441349.png)
+
+![image-20250305225443710](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305225443710.png)
+
+## 文件系统布局
+
+### 物理格式化
+
+![1741186551749](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186551749.png)
+
+### 逻辑格式化
+
+
+
+![image-20250305225724116](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305225724116.png)
+
+### 文件系统在外存中的结构
+
+![1741186559874](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186559874.png)
+
+### 文件系统在内存中的结构
+
+![1741186564055](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186564055.png)
+
+![1741186566906](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741186566906.png)
+
+
+
+## 虚拟文件系统
+
+
+
+
+
+
+
+# 第五章
+
